[project]
name = "commands"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "questionary>=2.1.1",
    "click>=8.3.0",
    "pytest>=9.0.1",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.27.0",
]

[tool.uv]
dev-dependencies = [
    "pyright>=1.1.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
